--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "hexo generate",
     "clean": "hexo clean",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
     "server": "hexo server"
   },
   "hexo": {
